--- a/index.html
+++ b/index.html
@@ -6,28 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Mentor Pro | Next-Gen Learning</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+        }
+    </script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-[#0f172a] text-slate-200 h-screen overflow-hidden font-sans">
+<body class="bg-white text-slate-900 dark:bg-[#0f172a] dark:text-slate-200 h-screen overflow-hidden font-sans transition-colors duration-300">
+
+    <div id="auth-overlay" class="fixed inset-0 z-[100] bg-[#0f172a] flex items-center justify-center p-4">
+        <div class="bg-slate-800/50 border border-slate-700 p-8 rounded-[2.5rem] glass max-w-md w-full text-center shadow-2xl">
+            <div class="w-16 h-16 bg-blue-600 rounded-2xl flex items-center justify-center mx-auto mb-6 shadow-lg shadow-blue-600/20">
+                <i data-lucide="bot" class="w-10 h-10 text-white"></i>
+            </div>
+            <h2 class="text-2xl font-bold text-white mb-2">Welcome Back</h2>
+            <p class="text-slate-400 text-xs mb-8">Login to continue your AI learning journey</p>
+
+            <div class="space-y-3">
+                <button class="w-full flex items-center justify-center gap-3 bg-white text-slate-900 py-3 rounded-xl font-bold hover:bg-slate-100 transition-all active:scale-95 text-sm">
+                    <img src="https://www.svgrepo.com/show/475656/google-color.svg" class="w-5 h-5">
+                    Continue with Google
+                </button>
+                <button class="w-full flex items-center justify-center gap-3 bg-[#0077b5] text-white py-3 rounded-xl font-bold hover:bg-[#005c8d] transition-all active:scale-95 text-sm">
+                    <img src="https://www.svgrepo.com/show/448234/linkedin.svg" class="w-5 h-5 invert">
+                    Continue with LinkedIn
+                </button>
+
+                <div class="flex items-center my-6">
+                    <div class="flex-1 h-[1px] bg-slate-700"></div>
+                    <span class="px-4 text-[10px] text-slate-500 uppercase tracking-widest">or</span>
+                    <div class="flex-1 h-[1px] bg-slate-700"></div>
+                </div>
+
+                <div class="relative group">
+                    <i data-lucide="phone" class="absolute left-4 top-3.5 w-4 h-4 text-slate-500"></i>
+                    <input type="tel" placeholder="Enter Phone Number" class="w-full bg-slate-900/50 border border-slate-700 py-3 pl-12 pr-4 rounded-xl outline-none focus:border-blue-500 text-white text-sm transition-all">
+                </div>
+
+                <button id="login-btn" class="w-full bg-blue-600 hover:bg-blue-500 text-white py-3 rounded-xl font-bold mt-4 shadow-lg shadow-blue-600/30 transition-all active:scale-95">
+                    Get Started
+                </button>
+            </div>
+        </div>
+    </div>
 
     <div class="flex flex-col md:flex-row h-full w-full">
 
-        <aside class="w-full md:w-20 bg-[#1e293b] flex flex-row md:flex-col items-center py-3 md:py-8 border-b md:border-r border-slate-700 justify-around md:justify-start md:space-y-8 z-30 shrink-0">
+        <aside class="w-full md:w-20 bg-slate-100 dark:bg-[#1e293b] flex flex-row md:flex-col items-center py-3 md:py-8 border-b md:border-r border-slate-300 dark:border-slate-700 justify-around md:justify-start md:space-y-8 z-30 shrink-0">
             <div class="p-2 bg-blue-600 rounded-xl shadow-lg">
                 <i data-lucide="bot" class="w-6 h-6 text-white"></i>
             </div>
-            <nav class="flex flex-row md:flex-col gap-6 md:gap-10 opacity-60">
-                <i id="nav-chat" data-lucide="layout-dashboard" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-colors"></i>
-                <i id="nav-books" data-lucide="book-open" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-colors"></i>
-                <i id="nav-settings" data-lucide="settings" class="w-6 h-6 cursor-pointer hover:text-blue-400 transition-colors"></i>
+            <nav class="flex flex-row md:flex-col gap-6 md:gap-10 opacity-60 dark:text-slate-200">
+                <i id="nav-chat" data-lucide="layout-dashboard" class="w-6 h-6 cursor-pointer hover:text-blue-600 dark:hover:text-blue-400 transition-colors"></i>
+                <i id="nav-books" data-lucide="book-open" class="w-6 h-6 cursor-pointer hover:text-blue-600 dark:hover:text-blue-400 transition-colors"></i>
+                <i id="nav-settings" data-lucide="settings" class="w-6 h-6 cursor-pointer hover:text-blue-600 dark:hover:text-blue-400 transition-colors"></i>
             </nav>
         </aside>
 
-        <main class="flex-1 flex flex-col bg-[#0f172a] overflow-hidden min-w-0">
-            <header class="h-16 border-b border-slate-800 flex items-center px-6 shrink-0">
+        <main class="flex-1 flex flex-col bg-white dark:bg-[#0f172a] overflow-hidden min-w-0 transition-colors duration-300">
+            <header class="h-16 border-b border-slate-200 dark:border-slate-800 flex items-center px-6 shrink-0">
                 <h1 id="section-title" class="text-lg font-bold tracking-tight">AI Mentor Pro</h1>
             </header>
 
@@ -37,88 +78,78 @@
                         <div class="w-10 h-10 rounded-xl bg-blue-600 flex items-center justify-center shrink-0">
                             <i data-lucide="bot" class="w-6 h-6 text-white"></i>
                         </div>
-                        <div class="bg-slate-800/40 border border-slate-700 p-4 rounded-2xl rounded-tl-none glass text-sm shadow-xl">
+                        <div class="bg-slate-100 dark:bg-slate-800/40 border border-slate-200 dark:border-slate-700 p-4 rounded-2xl rounded-tl-none text-sm shadow-sm dark:shadow-xl transition-colors">
                             Hello, I am your AI mentor. What topic are we going to cover today?
                         </div>
                     </div>
                 </div>
 
-                <footer class="p-4 bg-[#0f172a] border-t border-slate-800/50">
-                    <div class="max-w-4xl mx-auto flex gap-2 items-center bg-slate-800/40 border border-slate-700 p-2 rounded-2xl">
-                        <input type="text" id="user-input" placeholder="Ask anything..." class="flex-1 bg-transparent border-none outline-none px-3 py-2 text-sm text-white">
-                        <button id="mic-btn" class="p-2 text-slate-400 hover:text-blue-400"><i data-lucide="mic" class="w-5 h-5"></i></button>
+                <footer class="p-4 border-t border-slate-200 dark:border-slate-800/50">
+                    <div class="max-w-4xl mx-auto flex gap-2 items-center bg-slate-100 dark:bg-slate-800/40 border border-slate-200 dark:border-slate-700 p-2 rounded-2xl">
+                        <input type="text" id="user-input" placeholder="Ask anything..." class="flex-1 bg-transparent border-none outline-none px-3 py-2 text-sm dark:text-white">
+                        <button id="mic-btn" class="p-2 text-slate-500 hover:text-blue-600"><i data-lucide="mic" class="w-5 h-5"></i></button>
                         <button id="send-btn" class="bg-blue-600 p-2 rounded-xl hover:bg-blue-500 transition-all active:scale-90"><i data-lucide="send" class="w-5 h-5 text-white"></i></button>
                     </div>
                 </footer>
             </div>
 
-            <div id="books-section" class="hidden flex-1 overflow-y-auto p-6 space-y-8 bg-[#0f172a]">
-                <div class="flex items-center justify-between border-b border-slate-800 pb-4">
-                    <h2 class="text-xl font-bold">Java Learning Path</h2>
-                    <span class="text-xs text-blue-400 bg-blue-600/10 px-3 py-1 rounded-full font-bold">3 MODULES</span>
+            <div id="books-section" class="hidden flex-1 overflow-y-auto p-6 space-y-8">
+                <div class="flex items-center justify-between border-b border-slate-200 dark:border-slate-800 pb-4">
+                    <h2 class="text-xl font-bold">Learning Library</h2>
+                    <span class="text-xs text-blue-600 dark:text-blue-400 bg-blue-600/10 px-3 py-1 rounded-full font-bold uppercase tracking-wide">Available Modules</span>
                 </div>
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                    <div class="group bg-slate-800/30 border border-slate-700 p-6 rounded-[2rem] hover:border-blue-500/50 transition-all glass">
-                       <div class="w-12 h-12 bg-blue-600/20 rounded-2xl flex items-center justify-center mb-6 text-blue-400 group-hover:scale-110 transition-transform">
+                    <div class="group bg-slate-50 dark:bg-slate-800/30 border border-slate-200 dark:border-slate-700 p-6 rounded-[2rem] hover:border-blue-500/50 transition-all">
+                       <div class="w-12 h-12 bg-blue-600/20 rounded-2xl flex items-center justify-center mb-6 text-blue-600 dark:text-blue-400 group-hover:scale-110 transition-transform">
                             <i data-lucide="terminal" class="w-6 h-6"></i>
                         </div>
-                        <h3 class="font-bold text-white">Java foundations</h3>
-                        <p class="text-xs text-slate-400 mt-2 mb-6 leading-relaxed">JVM, Variables, and your first "Hello World" program.</p>
+                        <h3 class="font-bold">Java Foundations</h3>
+                        <p class="text-xs text-slate-500 dark:text-slate-400 mt-2 mb-6 leading-relaxed">Master JVM, variables, and writing your first program.</p>
                         <div class="flex items-center justify-between">
-                            <span class="text-[10px] text-emerald-400 font-bold uppercase">Completed</span>
+                            <span class="text-[10px] text-emerald-600 dark:text-emerald-400 font-bold uppercase">Completed</span>
                             <button class="bg-blue-600/80 hover:bg-blue-600 text-[10px] text-white font-bold px-4 py-2 rounded-xl">REVIEW</button>
-                        </div>
-                    </div>
-                    <div class="group bg-slate-800/30 border border-slate-700 p-6 rounded-[2rem] hover:border-purple-500/50 transition-all glass">
-                        <div class="w-12 h-12 bg-purple-600/20 rounded-2xl flex items-center justify-center mb-6 text-purple-400 group-hover:scale-110 transition-transform">
-                            <i data-lucide="git-branch" class="w-6 h-6"></i>
-                        </div>
-                        <h3 class="font-bold text-white">Logic & Loops</h3>
-                        <p class="text-xs text-slate-400 mt-2 mb-6 leading-relaxed">Mastering If-Else, Switch cases, and For/While loops logic.</p>
-                        <div class="flex items-center justify-between">
-                            <span class="text-[10px] text-slate-500 font-bold uppercase">40% PROGRESS</span>
-                            <button class="bg-slate-700 hover:bg-slate-600 text-[10px] text-white font-bold px-4 py-2 rounded-xl">CONTINUE</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="settings-section" class="hidden flex-1 p-6 space-y-6 bg-[#0f172a]">
+
+            <div id="settings-section" class="hidden flex-1 p-6 space-y-6">
                 <h2 class="text-xl font-bold">Profile Settings</h2>
                 <div class="max-w-md space-y-4">
-                    <div class="bg-white/5 border border-white/5 p-4 rounded-2xl flex justify-between items-center">
+                    <div class="bg-slate-100 dark:bg-white/5 border border-slate-200 dark:border-white/5 p-4 rounded-2xl flex justify-between items-center">
                         <span class="text-sm">Dark Mode</span>
-                        <div class="w-10 h-5 bg-blue-600 rounded-full relative"><div class="absolute right-1 top-1 w-3 h-3 bg-white rounded-full"></div></div>
+                        <div id="theme-toggle" class="w-10 h-5 bg-slate-300 dark:bg-blue-600 rounded-full relative cursor-pointer transition-all duration-300">
+                            <div id="toggle-circle" class="absolute left-1 dark:right-1 dark:left-auto top-1 w-3 h-3 bg-white rounded-full transition-all"></div>
+                        </div>
                     </div>
-                    <div class="bg-white/5 border border-white/5 p-4 rounded-2xl flex justify-between items-center opacity-50">
-                        <span class="text-sm">Language: English</span>
-                        <i data-lucide="chevron-right" class="w-4 h-4"></i>
+                    <div class="p-4 bg-slate-100 dark:bg-white/5 rounded-2xl border border-slate-200 dark:border-white/5 text-sm text-slate-500 dark:text-slate-400">
+                        Logged in via: Google
                     </div>
                 </div>
             </div>
         </main>
 
-        <aside class="w-full md:w-72 lg:w-80 bg-[#1e293b]/30 border-t md:border-t-0 md:border-l border-slate-800 p-6 overflow-y-auto shrink-0">
+        <aside class="w-full md:w-72 lg:w-80 bg-slate-50 dark:bg-[#1e293b]/30 border-t md:border-t-0 md:border-l border-slate-200 dark:border-slate-800 p-6 overflow-y-auto shrink-0 transition-colors">
             <h3 class="text-lg font-semibold mb-6">Learning Progress</h3>
-            <div class="bg-white/5 p-5 rounded-3xl border border-white/5 mb-6">
+            <div class="bg-slate-200 dark:bg-white/5 p-5 rounded-3xl border border-slate-300 dark:border-white/5 mb-6">
                 <div class="flex justify-between text-xs mb-2">
-                    <span class="text-slate-400">Java Basics</span>
-                    <span class="text-blue-400 font-bold">70%</span>
+                    <span class="text-slate-500 dark:text-slate-400">Current Course</span>
+                    <span class="text-blue-600 dark:text-blue-400 font-bold">70%</span>
                 </div>
-                <div class="w-full bg-slate-700 h-1.5 rounded-full overflow-hidden">
+                <div class="w-full bg-slate-300 dark:bg-slate-700 h-1.5 rounded-full overflow-hidden">
                     <div class="bg-blue-500 h-full w-[70%]"></div>
-                </div>
-            </div>
-            <div class="space-y-4">
-                <h4 class="text-[10px] uppercase text-slate-500 font-bold tracking-widest">Upcoming</h4>
-                <div class="flex items-center gap-3 p-3 rounded-xl bg-white/5 text-sm opacity-50">
-                    <i data-lucide="lock" class="w-4 h-4"></i> API Integration
                 </div>
             </div>
         </aside>
     </div>
 
-    <script>lucide.createIcons();</script>
+    <script>
+        lucide.createIcons();
+        document.getElementById('login-btn').addEventListener('click', function() {
+            document.getElementById('auth-overlay').style.display = 'none';
+        });
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
